tools: bump ruff to 0.3.0 and fix issues

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,7 +35,7 @@ jobs:
           -r dev-requirements.txt
       - name: ruff
         run: >
-          python -m ruff .
+          python -m ruff check .
 
   typing:
     name: Typing
