--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dynamic = [
 requires-python = ">=3.8"
 dependencies = [
   "certifi",
+  "exceptiongroup",
   "isodate",
   "lxml >=4.6.4,<6",
   "pycountry",
