--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dynamic = [
 requires-python = ">=3.8"
 dependencies = [
   "certifi",
-  "exceptiongroup",
+  "exceptiongroup ; python_version<'3.11'",
   "isodate",
   "lxml >=4.6.4,<6",
   "pycountry",
