chore: add collab checkboxes to issue templates

--- a/.github/ISSUE_TEMPLATE/2_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/2_bug_report.yml
@@ -36,6 +36,12 @@ body:
           required: true
         - label: "[I have checked the commit log of the master branch](https://github.com/streamlink/streamlink/commits/master)"
           required: true
+  - type: checkboxes
+    attributes:
+      label: Collaboration
+      options:
+        - label: "[I will provide feedback should a pull request be opened with a fix for the problem](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#pull-request-feedback)"
+          required: true
   - type: input
     attributes:
       label: Streamlink version
@@ -88,8 +94,6 @@ body:
         Make sure that you have
         - [ ] properly filled in the title of this bug report (at the very top of this page)
         - [ ] checked the rendered text previews to avoid unnecessary formatting errors
-
-        Please [don't forget to provide feedback](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#pull-request-feedback) once a pull request gets submitted for fixing the bug.
 
         ----
 
