--- a/.github/ISSUE_TEMPLATE/1_plugin_issue.yml
+++ b/.github/ISSUE_TEMPLATE/1_plugin_issue.yml
@@ -33,6 +33,12 @@ body:
           required: true
         - label: "[I have checked the commit log of the master branch](https://github.com/streamlink/streamlink/commits/master)"
           required: true
+  - type: checkboxes
+    attributes:
+      label: Collaboration
+      options:
+        - label: "[I will provide feedback should a pull request be opened with a fix for the plugin](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#pull-request-feedback)"
+          required: true
   - type: input
     attributes:
       label: Streamlink version
@@ -86,8 +92,6 @@ body:
         Make sure that you have
         - [ ] properly filled in the title of this plugin issue (at the very top of this page)
         - [ ] checked the rendered text previews to avoid unnecessary formatting errors
-
-        Please [don't forget to provide feedback](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#pull-request-feedback) once a pull request gets submitted for fixing the plugin issue.
 
         ----
 
