--- a/.github/ISSUE_TEMPLATE/3_plugin_request.yml
+++ b/.github/ISSUE_TEMPLATE/3_plugin_request.yml
@@ -33,32 +33,51 @@ body:
           required: true
         - label: "[I have checked the list of open and recently closed plugin requests](https://github.com/streamlink/streamlink/issues?q=is%3Aissue+label%3A%22plugin+request%22)"
           required: true
+  - type: checkboxes
+    attributes:
+      label: Collaboration
+      options:
+        - label: My request is genuine, in the best interest of the project, and I have access to the stream(s) in my web browser
+          required: true
+        - label: "[I will provide feedback should a pull request be opened with a new plugin implementation](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#pull-request-feedback)"
+          required: true
+        - label: I will help with reporting future plugin issues should the new plugin be merged and then stop working
+          required: true
   - type: textarea
     attributes:
       label: Description
       description: |
         Explain the plugin and site as clearly as you can [according to the plugin request guidelines](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#plugin-requests).
 
-        For example (please provide more details if possible):
+        Please provide more details if possible, but at least answer the following questions.
+      value: |
+        **What is the site about?**
+        ...
 
-        - What is the site about?
-        - Who is it owned and run by?
-        - What kind of content does it provide?
-        - Are there any access restrictions, like logins or region checks?
+        **Who is it owned and run by?**
+        ...
+
+        **What kind of content does it provide?**
+        ...
+
+        **Are there any access restrictions, like logins or region checks?**
+        ...
+
+        **Further relevant information**
+        ...
     validations:
       required: true
   - type: textarea
     attributes:
       label: Input URLs
       description: |
-        Please provide a list of example input URLs.
+        Please provide a list of example input URLs from your web browser's address bar.
 
         **DO NOT post screenshots of the site or your web browser.**
-      placeholder: |
+      value: |
         1. ...
         2. ...
         3. ...
-        etc.
     validations:
       required: true
   - type: markdown
@@ -69,8 +88,6 @@ body:
         Make sure that you have
         - [ ] properly filled in the title of this plugin request (at the very top of this page)
         - [ ] checked the rendered text previews to avoid unnecessary formatting errors
-
-        Please [don't forget to provide feedback](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#pull-request-feedback) once a pull request gets submitted for adding the new plugin.
 
         ----
 
