--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,9 +50,13 @@ jobs:
           python -m pip install -U
           -e .
           -r dev-requirements.txt
-          brotli
           shtab
         continue-on-error: ${{ matrix.continue || false }}
+      - name: Install optional Python dependencies
+        if: ${{ ! startsWith(matrix['python-version'], '3.13') }}
+        run: >
+          python -m pip install -U
+          brotli
       - name: Test
         continue-on-error: ${{ matrix.continue || false }}
         run: pytest -r a --cov --cov-branch --cov-report=xml --durations 10
