--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,13 +27,14 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-        include:
-          - runs-on: ubuntu-latest
-            python-version: "3.13-dev"
-            continue: true
-          - runs-on: windows-latest
-            python-version: "3.13-dev"
-            continue: true
+          - "3.13-dev"  # TODO: remove -dev suffix once stable release has been published
+        # include:
+        #   - runs-on: ubuntu-latest
+        #     python-version: "3.14-dev"
+        #     continue: true
+        #   - runs-on: windows-latest
+        #     python-version: "3.14-dev"
+        #     continue: true
     runs-on: ${{ matrix.runs-on }}
     timeout-minutes: 60
     steps:
