--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,8 @@ dependencies = [
   "pycryptodome >=3.4.3,<4",
   "PySocks >=1.5.6,!=1.5.7",
   "requests >=2.26.0,<3",
-  "trio >=0.22.0,<1",
+  "trio >=0.25.0,<1 ; python_version>='3.13'",
+  "trio >=0.22.0,<1 ; python_version<'3.13'",
   "trio-websocket >=0.9.0,<1",
   "typing-extensions >=4.0.0",
   "urllib3 >=1.26.0,<3",
