--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,9 +7,11 @@ build:
   jobs:
     post_checkout:
       - "[ ${READTHEDOCS_VERSION_TYPE} = external ] || exit 183"
-      - "git fetch --depth=300 origin +refs/tags/*:refs/tags/*"
+      - git ls-remote --tags --sort=version:refname 2>&- | awk "END{printf \"+%s:%s\",\$2,\$2}" | git fetch origin --depth=300
+      - git fetch origin --depth=300 --update-shallow
+      - git describe --tags --long --dirty
     post_install:
-      - "python -m pip install --upgrade --upgrade-strategy=eager -e ."
+      - python -m pip install --upgrade --upgrade-strategy=eager -e .
 
 python:
   install:
