--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,11 @@ jobs:
         with:
           fetch-depth: 300
       - name: Fetch tags
-        run: git fetch --depth=300 origin +refs/tags/*:refs/tags/*
+        shell: bash
+        run: |
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git fetch origin --depth=300 --update-shallow
+          git describe --tags --long --dirty
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -78,7 +82,10 @@ jobs:
         with:
           fetch-depth: 300
       - name: Fetch tags
-        run: git fetch --depth=300 origin +refs/tags/*:refs/tags/*
+        run: |
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git fetch origin --depth=300 --update-shallow
+          git describe --tags --long --dirty
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
@@ -113,7 +120,10 @@ jobs:
         with:
           fetch-depth: 300
       - name: Fetch tags
-        run: git fetch --depth=300 origin +refs/tags/*:refs/tags/*
+        run: |
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git fetch origin --depth=300 --update-shallow
+          git describe --tags --long --dirty
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
