--- a/.github/ISSUE_TEMPLATE/3_plugin_request.yml
+++ b/.github/ISSUE_TEMPLATE/3_plugin_request.yml
@@ -91,4 +91,4 @@ body:
 
         ----
 
-        [❤️ Love Streamlink? Please consider supporting the project maintainers. Thanks! ❤️](https://streamlink.github.io/latest/donate.html)
+        [❤️ Love Streamlink? Please consider supporting the project maintainers. Thanks! ❤️](https://streamlink.github.io/latest/support.html)
