ci: update git fetch commands

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Fetch tags
         shell: bash
         run: |
-          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s\n",$2,$2}' | git fetch origin --depth=300
           git fetch origin --depth=300 --update-shallow
           git describe --tags --long --dirty
       - uses: actions/setup-python@v5
@@ -82,7 +82,7 @@ jobs:
           fetch-depth: 300
       - name: Fetch tags
         run: |
-          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s\n",$2,$2}' | git fetch origin --depth=300
           git fetch origin --depth=300 --update-shallow
           git describe --tags --long --dirty
       - uses: actions/setup-python@v5
@@ -120,7 +120,7 @@ jobs:
           fetch-depth: 300
       - name: Fetch tags
         run: |
-          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s\n",$2,$2}' | git fetch origin --depth=300
           git fetch origin --depth=300 --update-shallow
           git describe --tags --long --dirty
       - uses: actions/setup-python@v5
