--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,7 +7,7 @@ build:
   jobs:
     post_checkout:
       - "[ ${READTHEDOCS_VERSION_TYPE} = external ] || exit 183"
-      - git ls-remote --tags --sort=version:refname 2>&- | awk "END{printf \"+%s:%s\",\$2,\$2}" | git fetch origin --depth=300
+      - git ls-remote --tags --sort=version:refname 2>&- | awk "END{printf \"+%s:%s\\n\",\$2,\$2}" | git fetch origin --depth=300
       - git fetch origin --depth=300 --update-shallow
       - git describe --tags --long --dirty
     post_install:
