--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 300
       - name: Fetch tags
         run: |
-          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s",$2,$2}' | git fetch origin --depth=300
+          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s\n",$2,$2}' | git fetch origin --depth=300
           git fetch origin --depth=300 --update-shallow
           git describe --tags --long --dirty
       - uses: actions/setup-python@v5
