--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,10 @@ jobs:
       - name: Fetch tags
         shell: bash
         run: |
-          git ls-remote --tags --sort=version:refname 2>&- | awk 'END{printf "+%s:%s\n",$2,$2}' | git fetch origin --depth=300
+          git ls-remote --tags --sort=version:refname 2>&- \
+            | awk 'END{printf "+%s:%s\n",$2,$2}' \
+            | git fetch origin --depth=300 \
+            || { ec=$?; [ $ec -eq 141 ] && true || (exit $ec); }
           git fetch origin --depth=300 --update-shallow
           git describe --tags --long --dirty
       - uses: actions/setup-python@v5
