build: add decompress extras marker
Instead of defining brotli and zstandard directly, rely on urllib3's
version requirements and use its brotli and zstd extras markers.

brotli or zstandard may be required by some websites which ignore
the HTTP client's decompression capabilities set in the Accept-Encoding
HTTP header. Both dependencies are picked up automatically if available.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,13 @@ dependencies = [
   "websocket-client >=1.2.1,<2",
 ]
 
+[project.optional-dependencies]
+decompress = [
+  # don't define brotli or zstandard library versions here
+  # and instead rely on urllib3's version requirements
+  "urllib3[brotli,zstd] >=1.26.0,<3"
+]
+
 [project.urls]
 Homepage = "https://github.com/streamlink/streamlink"
 Documentation = "https://streamlink.github.io/"
