--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install Python dependencies
         run: >
           python -m pip install -U
-          -e .
+          -e .[decompress]
           -r dev-requirements.txt
         continue-on-error: ${{ matrix.continue || false }}
       - name: Install optional Python dependencies
