--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,10 @@ jobs:
           - "3.11"
           - "3.12"
           - "3.13"
-        # include:
-        #   - runs-on: ubuntu-latest
-        #     python-version: "3.14-dev"
-        #     continue: true
+        include:
+          - runs-on: ubuntu-latest
+            python-version: "3.14-dev"
+            continue: true
         #   - runs-on: windows-latest
         #     python-version: "3.14-dev"
         #     continue: true
@@ -52,6 +52,15 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install temp dependency wheels
+        shell: bash
+        run: |
+          if [[ "$(uname)" == Linux && "$(python -V)" =~ 3.14. ]]; then
+            python -m pip install -U \
+              https://github.com/streamlink/temp-dependency-builds-DO-NOT-USE/releases/download/lxml-20250509-1/lxml-5.4.0-cp314-cp314-linux_x86_64.whl \
+              https://github.com/streamlink/temp-dependency-builds-DO-NOT-USE/releases/download/brotli-20250509-1/brotli-1.1.0-cp314-cp314-linux_x86_64.whl \
+              https://github.com/streamlink/temp-dependency-builds-DO-NOT-USE/releases/download/zstandard-20250509-1/zstandard-0.23.0-cp314-cp314-linux_x86_64.whl
+          fi
       - name: Install Python dependencies
         run: >
           python -m pip install -U
