--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
           - "3.11"
           - "3.12"
           - "3.13"
+          - "3.13t"
         include:
           - runs-on: ubuntu-latest
             python-version: "3.14-dev"
@@ -71,7 +72,10 @@ jobs:
         continue-on-error: ${{ matrix.continue || false }}
       - name: Test
         continue-on-error: ${{ matrix.continue || false }}
-        run: pytest -r a --cov --cov-branch --cov-report=xml --durations 10
+        shell: bash
+        run: |
+          export PYTHON_GIL=$(python -c 'import sysconfig;print(1 - sysconfig.get_config_var("Py_GIL_DISABLED"))')
+          pytest -r a --cov --cov-branch --cov-report=xml --durations 10
       - name: Upload coverage data
         if: github.event_name != 'schedule'
         continue-on-error: ${{ matrix.continue || false }}
