--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,7 @@ jobs:
         run: >
           python -m pip install -U
           -e .
-          -r dev-requirements.txt
+          --group lint
       - name: ruff check
         run: >
           python -m ruff check .
@@ -53,8 +53,7 @@ jobs:
         run: >
           python -m pip install -U
           -e .
-          -r dev-requirements.txt
-          -r docs-requirements.txt
+          --group typing
       - name: mypy
         run: |
           python -m mypy --no-incremental
