--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
         run: >
           python -m pip install -U
           -e .[decompress]
-          -r dev-requirements.txt
+          --group test
         continue-on-error: ${{ matrix.continue || false }}
       - name: Test
         continue-on-error: ${{ matrix.continue || false }}
@@ -98,10 +98,7 @@ jobs:
         run: >
           python -m pip install -U
           -e .
-          -r dev-requirements.txt
-          build
-          wheel
-          shtab
+          --group build
       - name: Build shell completions
         continue-on-error: ${{ matrix.continue || false }}
         run: bash ./script/build-shell-completions.sh
@@ -136,6 +133,6 @@ jobs:
         run: >
           python -m pip install -U
           -e .
-          -r docs-requirements.txt
+          --group docs
       - name: Build
         run: make --directory=docs html man
