--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,11 +11,7 @@ build:
       - git fetch origin --depth=300 --update-shallow
       - git describe --tags --long --dirty
     post_install:
-      - python -m pip install --upgrade --upgrade-strategy=eager -e .
-
-python:
-  install:
-    - requirements: docs-requirements.txt
+      - python -m pip install --upgrade --upgrade-strategy=eager -e . --group docs
 
 sphinx:
   configuration: docs/conf.py
