--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ lint = [
 typing = [
   { include-group = "test" },
   { include-group = "docs" },
-  "mypy ==1.16.1",
+  "mypy[faster-cache] ==1.16.1",
   "typing-extensions >=4.0.0",
   "lxml-stubs",
   "trio-typing",
