tests: req pytest>=8.4.0, load plugins explicitly
Add the `--disable-plugin-autoload` pytest option (pytest >=8.4.0)
and explicitly load pytest plugins which are required by
Streamlink's test suite.

By default, pytest plugins are discovered automatically by checking all
installed Python distributions in the current Python environment,
which may lead to unwanted pytest plugins being loaded and executed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,12 +95,14 @@ dev = [
 ]
 test = [
   { include-group = "dev" },
-  "pytest >=8.0.0",
-  "pytest-trio",
-  "freezegun >=1.5.0",
-  "requests-mock",
-  "coverage[toml]",
+  # pytest and plugins
+  "pytest >=8.4.0",
   "pytest-cov",
+  "pytest-trio",
+  "requests-mock",
+  # other
+  "coverage[toml]",
+  "freezegun >=1.5.0",
 ]
 lint = [
   "ruff ==0.12.3",
@@ -189,6 +191,13 @@ method = { module = "build_backend.onbuild", value = "onbuild" }
 # https://docs.pytest.org/en/latest/reference/customize.html#configuration
 # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
 [tool.pytest.ini_options]
+minversion = "8.4.0"
+addopts = """
+--disable-plugin-autoload
+-p pytest_cov
+-p trio
+-p requests_mock
+"""
 testpaths = [
   "build_backend",
   "tests",
