docs: add NO_ACKNOWLEDGEMENTS make option
and move the acknowledgements / "thank you" section on the index page
into a separate file that's conditionally included, depending on
the make option / sphinx-build tag

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,10 +8,15 @@ PAPER         =
 DOCSDIR       = .
 BUILDDIR      = _build
 
+# Set to a non-empty value to hide the "Thank you" section on the index page
+NO_ACKNOWLEDGEMENTS =
+
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
-ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS)
+SPHINXTAGS      =
+SPHINXTAGS      += $(if $(NO_ACKNOWLEDGEMENTS), -t no_acknowledgements)
+ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) $(SPHINXTAGS)
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS)
 
