docs: add NO_INTERSPHINX make option

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -10,12 +10,15 @@ BUILDDIR      = _build
 
 # Set to a non-empty value to hide the "Thank you" section on the index page
 NO_ACKNOWLEDGEMENTS =
+# Set to a non-empty value to disable the "Intersphinx" extension
+NO_INTERSPHINX =
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
 SPHINXTAGS      =
 SPHINXTAGS      += $(if $(NO_ACKNOWLEDGEMENTS), -t no_acknowledgements)
+SPHINXTAGS      += $(if $(NO_INTERSPHINX), -t no_intersphinx)
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) $(SPHINXTAGS)
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS)
