ci.github: fix mypy docs step
Accidentally changed in c823064

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -67,4 +67,4 @@ jobs:
       - name: mypy docs
         if: always()
         run: >
-          python -m mypy --no-incremental
+          python -m mypy --no-incremental docs
