ci.github: replace if always() with !cancelled()

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,16 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: File permissions
-        if: always()
+        if: ${{ !cancelled() }}
         run: "! grep -Ev '^644' <(git ls-files src/ tests/ | xargs stat '--format=%a %n')"
       - name: File encodings
-        if: always()
+        if: ${{ !cancelled() }}
         run: "! grep -E -e 'UTF-[^8]' -e 'UTF-[^ ]+ \\(with BOM\\)' <(git ls-files src/ tests/ | xargs stat '--format=%a %n')"
       - name: Line terminators
-        if: always()
+        if: ${{ !cancelled() }}
         run: "! grep 'with CRLF line terminators' <(git ls-files | file -nNf-)"
       - name: No unicode bidirectional control characters
-        if: always()
+        if: ${{ !cancelled() }}
         run: "! git grep -EIn $'[\\u2066\\u2067\\u2068\\u2069\\u202A\\u202B\\u202C\\u202D\\u202E]'"
 
   style:
@@ -38,11 +38,11 @@ jobs:
           -e .
           --group lint
       - name: ruff check
-        if: always()
+        if: ${{ !cancelled() }}
         run: >
           python -m ruff check .
       - name: ruff format
-        if: always()
+        if: ${{ !cancelled() }}
         run: >
           python -m ruff format --diff .
 
@@ -61,10 +61,10 @@ jobs:
           -e .
           --group typing
       - name: mypy
-        if: always()
+        if: ${{ !cancelled() }}
         run: >
           python -m mypy --no-incremental
       - name: mypy docs
-        if: always()
+        if: ${{ !cancelled() }}
         run: >
           python -m mypy --python-version=3.12 --no-incremental docs
