--- a/.github/workflows/useragents.yml
+++ b/.github/workflows/useragents.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   update-user-agents:
     if: github.repository == 'streamlink/streamlink'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
