--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,8 @@ dependencies = [
   "trio >=0.25.0,<1 ; python_version>='3.13'",
   "trio >=0.22.0,<1 ; python_version<'3.13'",
   "trio-websocket >=0.9.0,<1",
+  # typing-extensions >=4.6.0 is already a transitive runtime dependency of exceptiongroup >=1.3.0
+  "typing-extensions >=4.1.0 ; python_version<'3.11'",
   "urllib3 >=2.0.0,<3",
   "websocket-client >=1.2.1,<2",
 ]
