tests: add --test-suite pytest argument
Add support for different test suites that can be selected
by running `pytest --test-suite=...`

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,8 @@ recursive-include completions *
 recursive-include docs *
 recursive-include tests *
 
+include conftest.py
+
 prune docs/_build
 include docs/_build/man/*
 
