tests: add secondary "plugins" test suite
This test suite is meant for running plugin acceptance tests where
real-world data is retrieved from streaming sites

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -48,6 +48,7 @@ coverage:
         target: 100
         paths:
           - "tests/"
+          - "!tests/plugins_remote/"
       build_backend:
         # build_backend should always be fully covered
         target: 100
