--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -23,28 +23,28 @@ jobs:
       - name: Windows builds
         run: |
           workflow=streamlink/windows-builds/actions/workflows/preview-build.yml
-          run_url=$(curl -sfL \
+          html_url=$(curl -sfL \
             -X POST \
             -H 'Accept: application/vnd.github+json' \
             -H 'X-GitHub-Api-Version: 2022-11-28' \
             -H 'Authorization: Bearer ${{ secrets.STREAMLINKBOT_PREVIEW_BUILD }}' \
             -d '{"return_run_details":true,"ref":"master","inputs":{"ref":"${{ github.sha }}"}}' \
             "https://api.github.com/repos/${workflow}/dispatches" \
-            | jq -r '.run_url' \
+            | jq -r '.html_url' \
           )
-          echo -e "## Windows builds\n\n- ${run_url}\n- https://github.com/${workflow}\n" \
+          echo -e "## Windows builds\n\n- ${html_url}\n- https://github.com/${workflow}\n" \
             >> "${GITHUB_STEP_SUMMARY}"
       - name: Linux AppImage
         run: |
           workflow=streamlink/streamlink-appimage/actions/workflows/preview-build.yml
-          run_url=$(curl -sfL \
+          html_url=$(curl -sfL \
             -X POST \
             -H 'Accept: application/vnd.github+json' \
             -H 'X-GitHub-Api-Version: 2022-11-28' \
             -H 'Authorization: Bearer ${{ secrets.STREAMLINKBOT_PREVIEW_BUILD }}' \
             -d '{"return_run_details":true,"ref":"master","inputs":{"ref":"${{ github.sha }}"}}' \
             "https://api.github.com/repos/${workflow}/dispatches" \
-            | jq -r '.run_url' \
+            | jq -r '.html_url' \
           )
-          echo -e "## AppImage\n\n- ${run_url}\n- https://github.com/${workflow}\n" \
+          echo -e "## AppImage\n\n- ${html_url}\n- https://github.com/${workflow}\n" \
             >> "${GITHUB_STEP_SUMMARY}"
